Fix coordinate of some window (have invisible border around window).

--- a/windows-alt-tab-3d@linuxdeepin.com/stylesheet.css
+++ b/windows-alt-tab-3d@linuxdeepin.com/stylesheet.css
@@ -29,15 +29,6 @@
     padding: 20px 20px 20px 20px;
 }
 
-.alt-tab-switch-actor-indicator {
-	background-gradient-direction: vertical;
-	background-gradient-start: rgba(0,0,0,0.6);
-	background-gradient-end: rgba(0,0,0,0.4);
-	border: 1px solid rgba(125,125,125,0.2);
-	box-shadow:  inset 0px -1px 0px 0px rgba(255,255,255,0.2);
-    padding: 1px 0px 0px 1px;
-}
-
 .alt-tab-workspace-indicator {
 	background-image: url("workspace-indicator.svg");
 }
